# official-doc-writer

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  opencode.json  pyproject.toml  requirements.txt  公文撰写工作站.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/: instructions.md  preload-skills.json
.opencode/agent/: grader.md  proofreader.md  writer.md
.opencode/commands/: kb-update.md  修改.md  函.md  归档.md  总结.md  报告.md  方案.md  校对.md  简报.md  纪要.md  讲话稿.md  评估.md  请示.md  通知.md
.opencode/plugins/: doc-hooks.ts
.opencode/skills/agent-browser/: SKILL.md
.opencode/skills/doc-format/: SKILL.md
.opencode/skills/doc-proofread/: SKILL.md
.opencode/skills/doc-rag/: SKILL.md
.opencode/skills/doc-style/: SKILL.md
.opencode/skills/doc-templates/: SKILL.md
.opencode/skills/official-document-writing/: SKILL.md
docs/: index.md
gui/: backend.py  main.py  main_window.py  web_search.py
gui/resources/: styles.qss
gui/widgets/: archive_widget.py  draft_widget.py  knowledge_widget.py  proofread_widget.py  settings_widget.py
tests/: conftest.py  debug_search.py  test_api_client.py  test_cost_tracker.py  test_document_generator.py  test_document_parser.py  test_file_utils.py  test_generate_doc.py  test_knowledge_base_updater.py  test_rag_engine.py  test_web_search.py
utils/: __init__.py  api_client.py  cost_tracker.py  document_generator.py  document_parser.py  file_utils.py  generate_doc.py  knowledge_base_updater.py  rag_engine.py  settings.py  setup_fonts.sh  wechat_crawler.py
utils/templates/: 函模板.txt  总结模板.txt  报告模板.txt  方案模板.txt  简报模板.txt  纪要模板.txt  讲话稿模板.txt  请示模板.txt  通知模板.txt
(+24 files in other folders)
